Thu Oct 22 22:34:42 1998  Jim Wilson  <wilson@cygnus.com>

	* reload1.c (reload_as_needed): When rewrite POST_INC, verify
	reg_reloaded_contents matches incremented pseudo.

	* v850/v850.c (v850_reorg): Call alter_subreg.  Delete subreg support.

Fri Oct 23 11:11:56 1998  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* rtl.def (POST_MODIFY, PRE_MODIFY): New generalized operators for
  	addressing modes with side effects.  These are currently
  	placeholders for the C4x target.

Thu Oct 22 16:46:35 1998  Bernd Schmidt <crux@pool.informatik.rwth-aachen.de>

	* loop.c (express_from): Make sure that when generating a PLUS of
	a PLUS, any constant expression appears on the outermost PLUS.

Thu Oct 22 15:46:23 1998  Per Bothner (bothner@cygnus.com)

	* Makefile.in (distdir-cvs, distdir-start):  Clean up so it
	works if "$(srcdir)" != ".".

Wed Oct 21 19:23:59 1998  Jim Wilson  <wilson@cygnus.com>

	* expmed.c (store_bit_field): If need to add a SUBREG, then remove
	existing SUBREG if we can, otherwise abort.

Wed Oct 21 09:58:51 1998  Mark Mitchell  <mark@markmitchell.com>

	* c-common.c (c_apply_type_quals_to_decl): Don't crash when
	`restrict' is applied to a non-pointer variable.

Wed Oct 21 09:18:58 1998  Mark Mitchell  <mark@markmitchell.com>

	* invoke.texi: Document -flang-isoc9x.

	* Makefile.in (OBJS): Add splay-tree.o.
	(c-common.o): Depend on rtl.h.
	(splay-tree.o): List dependencies and provide build rule.
	
	* rtl.h (record_alias_subset): New function.
	* alias.c: Include splay-tree.h.
	(alias_set_entry): New type.
	(CHECK_ALIAS_SETS_FOR_CONSISTENCY): Remove.
	(DIFFERENT_ALIAS_SETS_P): Use mem_in_disjoint_alias_sets_p.
	(mems_in_disjoin_alias_sets_p): New function.
	(alias_set_compare): Likewise.
	(insert_subset_children): Likewise.
	(get_alias_set_entry): Likewise.

	* tree.h (TYPE_RESTRICT): New macro.
	(TYPE_UNQUALIFIED): New manifest constant.
	(TYPE_QUAL_CONST): Likewise
	(TYPE_QUAL_VOLATILE): Likewise.
	(TYPE_QUAL_RESTRICT): Likewise.